public/styles/style.css
/* ... */
.matchHighlight a {
    text-decoration: none;
}
.matchHighlight a:hover {
    color: #F20B0B;
    text-decoration: underline;
}
.disabledLabel {
    color: #333;
    font-style: italic;
}
.field_header {
    font-weight: bold;
    color: #336;
    margin:1px 0 3px 0;
}
.field_header_black {    
    color: #000;
    margin: 1px 0 3px 0;
}

.field_header_black A:link,
.field_header_black A:visited,
.field_header_black A:active
{
    color: #000;
    text-decoration: none;
}

.field_header_black A:hover {
    color: #F20B0B;
    text-decoration: underline;
}

.center {
    text-align: center;
}

.formheader {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 11px;
    color: #333366;
    font-weight: bold;
}
.formheader1 {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 13px;
    color: #333366;
    font-weight: bold;
}
.formheader2 {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 11px;
    color: #333366;
    font-weight: italics;
}
.formheader3 {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 11px;
    color:#333366;
    font-weight: bold;
}
.formheader4 {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 11px;
    color: #000000;
    font-weight: normal;
}
.formheader5 {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 11px;
    color: #000000;
    font-weight: normal;
}

.page_header {
    color: #336;
    font-weight: bold;
    margin: 0 0 10px 0;
    text-align: center;
    padding: 0 0 5px 0;
    border-bottom: 1px solid #336;
}

.horizontal_line {
    margin: 0 0 10px 0;
    padding: 0 0 5px 0;
    border-bottom: 1px solid #336;
}
.info_content blockquote {
    padding: 5px 30px;
}
.justified {
    text-align: justify;
}

.page_title {
    color: #336;
    font-weight: bold;
    padding: 0 0 10px 0;
}
.listlink {    
    color: #000;
}

.listlink a:link,
.listlink a:visited,
.listlink a:active 
{
    text-decoration: none;
    color: #000;
}

.listlink a:hover {
    color: #F20B0B;
    text-decoration: underline;
}

.new, .new_big {
    font-size: 9px;
    font-weight: bold;
    color: #F400F4;
}

.new_big {
    font-size: 12px;
    padding: 0 4px;
}

.red {
    color: #b41a1a;
}

.nextpreviousarrows {
    font-size: 9px;
}

.selectedLetter {
    color: #336;
    font-weight: bold
}
.showdetails {
    margin-right: 2px;
    margin-left: 2px;
}
.tableheader, th {
    font-weight: bold;
    color: #666;    
    margin: 3px 2px;
}
.details th {
    width: 175px;
}

th {
    text-align: left;
    padding: 3px 3px 10px 3px;
}

th.current {
    text-decoration: underline;
}

th.horizontal a:link,
th.horizontal a:visited,
th.horizontal a:active {
    color: #666;
    text-decoration: none
}
th.horizontal a:hover {
    color: #666;
    text-decoration: underline
}
th.horizontal {    
    color: #336;
}
th.vertical {    
    vertical-align: top;
}
th.vertical a:link,
th.vertical a:visited,
th.vertical a:active
{
    color: #336;
    text-decoration: none
}

th.vertical a:hover {
    color: #F20B0B;
    text-decoration: underline
}

th.vertical {
    color: #336;
}

.treenode {
    margin-left: 4px;
}
.divider {
    position: relative;
    left: 10px;
    right: 10px;
    height: 20px;
    border-top: 1px solid #336;
}

.view {
    border: 1px solid #336;
    background-color: #FAFCFE;
    padding: 1px 4px 1px 0;
    margin: 0px 0px 0px 4px;
}

.view ul li ul {
    border: 1px solid #336;
    background-color: #fafcfe;
}
div.results_header {
    position: relative;
    display: table;
    width: 100%;
    margin: 0;
    padding: 0;
}
div.results_header div.results_counter {
    float: left;
    padding: 13px 0 0 0;
}
div.results_header div.results_form {
    float: right;
    padding: 5px 0 0 0;
}
div.paginationControl {
    width: 100%;
    text-align: center;
    display: block;
    position: relative;
    margin: 5px 0;
}
div.paginationControl a {
    color: blue;
}
div.paginationControl .page-slider,
div.paginationControl .page-current {
    font-weight: bold;    
}
div.page_links {
    width: 100%;
    text-align: center;
    margin: 5px 0;
    clear: both;
    display: table;
}
div.align-left {
    text-align: left;
}
div.copyright_notice {
    padding: 10px;
    border: 1px solid #000;
	background-color: #fff;
}
div.export-warning {
    background: transparent url(../images/warning.png) no-repeat top left;
    line-height: 16px;
    padding-left: 20px;
    margin-top: 15px;
}
#header {
    margin: 27px 0 16px 0;
}
#right-col {
    z-index: 0;
    margin: 0 15px 0 125px;
}
#content {
    padding: 15px;
    margin: 0;
    display: block;
    min-width: 410px;
}
.centered-box {
    width: 410px;
}
@media screen and (-webkit-min-device-pixel-ratio:0) {
    .centered-box {
        width: 440px;
    }
}
#content.centered-box {
    display: table;
}
#left-col {
    width: 125px;
    margin-left: -122px;
    float: left;
}

/* Forms */
/*********/
form p {
    margin: 0;
    padding: 0;    
    float: left;
    clear: none;
}
/*Items per page*/
form div.items-form dt#items-label dd,
form div.items-form dt#items-label dt {
    clear: none;
    float: left;
}
form div.items-form dt#key-label,  
form div.items-form dd#key-element,
form div.items-form dt#match-label,  
form div.items-form dd#key-element,
form div.items-form dt#update-label,
form div.items-form dt#itemsGroup-label
{
    display: none;
}
form div.items-form {
    float: right;
}
form div.items-form dd#items-element,
form div.items-form dt#items-label,
form div.items-form dd#items-element input,
form div.items-form dd#update-element {
    float: left;    
}
form div.items-form dt#items-label {
    padding: 3px 5px 0 0;
}
input#key {
    padding: 1px 0;
    width: 300px;
}
/* Search */
form div.search-form dd {
    clear: both;
    float: none;
}
form div.search-form dd fieldset dl dt label {
    line-height: 18px;
    padding: 0 10px 0 0;
    display: block;
    width: 90px;
}
/* ... */

